--- a/xueer_inlineblock.css
+++ b/xueer_inlineblock.css
@@ -13,18 +13,13 @@ body{
 }div{
     display: inline-block;
 }
-
-
 /* 基础设置*/
-.header-container{
+.header{
     width:100%;
     height:80px;
     background:rgba(255,255,255,1);
-    box-shadow:0px 2px 0px 0px rgba(238,238,238,1);
 }
-
-.header{
-    background: #FFFFFF;
+.header-center{
     height: 80px;
     width: 1000px;
     margin: 0 auto;
@@ -37,8 +32,7 @@ body{
     width:35px;
     height:34px;
     vertical-align: middle;
- 
-}
+ }
 .logo-text{
     width:52px;
     height:52px;
@@ -48,65 +42,61 @@ body{
 }
 .header-tab-container
 {
+    margin:0 30px;
 }
 .header-tab{
     height: 80px;
     vertical-align: middle;
 }
 .header-tab-item{
-    width:40px;
-    height:75px;
-    font-size:20px;
-    font-family:PingFangSC-Medium,PingFang SC;
-    font-weight:500;
-    line-height:75px;
-    margin-left: 30px;
+    width: 70px;
+    height: 75px;
+    font-size: 20px;
+    border-top: 5px solid #FFFFFF;
+    line-height: 70px;
+    text-align: center;
 }
 .header-tab-item:hover{
     border-top: 5px solid rgba(244,67,54,1);
     color:rgba(244,67,54,1);
-
 }
 .search-container{
     width:325px;
     height:30px;
-    background:rgba(255,255,255,1);
     border:2px solid rgba(244,67,54,1);
     vertical-align:middle;
-margin-left: 30px;}
-.search{
-    vertical-align: top;
-    }
+    font-size: 0;
+    margin: 0 55px;
+}
 .s-ipt{
     border: 0;
-    width: 245px;
+    width: 250px;
     height: 30px;
+    vertical-align: bottom;
 }
 .img-container{
-    width:76px;
+    width:75px;
     height:30px;
     background:rgba(244,67,54,1);
+    text-align: center;
 }
+img.searchimg {
+    height: 30px;}
 .peoplephoto{
     width:40px;
     height:40px;
     border-radius: 50%;
     vertical-align: middle;
-    margin-left: 30px;
+    margin: 0px 60px;
 }
 .signout{
-    font-size:14px;
-    font-family:PingFangSC-Medium,PingFang SC;
-    font-weight:500;
     color:rgba(255,255,255,1);
     line-height:30px;
     width:90px;
     height:30px;
     background:rgba(29,192,145,1);
-    border:2px solid rgba(29,192,145,1);
     text-align: center;
     vertical-align: middle;
-    margin-left: 30px;
 }
 /*header结束*/
 .wrapper{
@@ -125,13 +115,10 @@ margin-left: 30px;}
     width:1000px;
     height:400px;
     background:rgba(255,255,255,1);
-    box-shadow:0px 2px 0px 0px rgba(234,234,234,1);
-text-align: center;
+    text-align:center;
 }
-.class-content{
-    margin-top: 40px;
-    height: 90px;
-    margin-left: 70px
+.class-content{  
+    width:200px; 
 }
 .summeay{
     width:96px;
@@ -139,60 +126,57 @@ text-align: center;
     border:2px solid rgba(29,192,145,1);
     border-radius: 50%;
     font-size:36px;
-    font-family:PingFangSC-Light,PingFang SC;
-    font-weight:300;
     color:rgba(29,192,145,1);
     line-height:96px;
     text-align: center;
-    margin-bottom: 20px;
-    display:block;
+    margin: 23px;
 }
 li{
-    width:112px;
-    height:40px;
     font-size:14px;
-    font-family:PingFangSC-Light,PingFang SC;
-    font-weight:300;
     color:rgba(51,51,51,1);
-    line-height:20px;}
+}
 li:hover{
-    width:112px;
-    height:40px;
     font-size:14px;
-    font-family:PingFangSC-Light,PingFang SC;
-    font-weight:300;
     color:rgba(244,67,54,1);
-    line-height:20px;
 } 
 .class-details{
-
+    border-right: solid 1px #E8E8E8;
+    width: 140px;
 }
 .plus-sign{
-    margin-left: 35px;
     width:25px;
     height:25px;
     border:1px solid rgba(29,192,145,1);
-    margin-top: 20px;
     border-radius: 50px;
-    font-size :50px;
-    text-align: center;
-    line-height: 25px;
-    color: rgba(29,192,145,1);
     display:block;
+    position: relative;
+    margin: 20px auto;
+    text-align: initial;
+}
+.plus-sign::before{
+    content: '';
+    border-top: 1px solid rgba(29,192,145,1);
+    width: 25px;
+    position: absolute;
+    top: 50%;
+}
+.plus-sign::after{
+    content: '';
+    border-left: 1px solid rgba(29,192,145,1);
+    height: 25px;
+    position: absolute;
+    left: 50%;
 }
 .hotclass{
     width:1000px;
     height:410px;
     background:rgba(255,255,255,1);
-    box-shadow:0px 2px 0px 0px rgba(234,234,234,1);
     margin-top: 20px;
 }
 .module-title{
     width:1000px;
     height:25px;
     font-size:18px;
-    font-family:PingFangSC-Medium,PingFang SC;
-    font-weight:500;
     color:rgba(102,102,102,1);
     line-height:25px;
     padding-top: 20px;
@@ -202,23 +186,20 @@ li:hover{
     width: 1000px;
     height:20px;
     font-size:12px;
-    font-family:PingFangSC-Medium,PingFang SC;
-    font-weight:500;
     color:rgba(29,192,145,1);
     line-height:  20px;
     text-align:center;
-}
-.module-container{
-    width: 750px;
-    height: 210px;
-    padding-left: 150px;
-    padding-top: 20px;
 }
 .rectangle1{
     width:140px;
     height:105px;
     border:2px solid rgba(29,192,145,1);
-    
+    text-align: center;
+}
+table {
+    border-collapse: collapse;
+    margin: 0 auto;
+    margin-top:40px;
 }
 .rectangle1:hover{
     background-color: rgba(29,192,145,1);
@@ -227,18 +208,14 @@ li:hover{
     width:144px;
     height:40px;
     font-size:14px;
-    font-family:PingFangSC-Light,PingFang SC;
     font-weight:300;
     color:rgba(51,51,51,1);
-    line-height:50px;
-    text-align: -webkit-center;
+    text-align: center;
 }
 .rectangle2{
     width:140px;
     height:105px;
     font-size:48px;
-    font-family:PingFangSC-Light,PingFang SC;
-    font-weight:300;
     color:rgba(244,67,54,1);
     line-height:105px;
     text-align: center;
@@ -249,16 +226,19 @@ li:hover{
     height:355px;
     margin-top: 20px;
     background:rgba(255,255,255,1);
-    box-shadow:0px 2px 0px 0px rgba(234,234,234,1);
-    
+    text-align: center;
 }
 .module-container2{
     width: 800px;
-    height: 140px;
-    margin-left: 127px;
-    margin-top: 50px;
+    height: 220px;
 }
-
+.module-container2::before {
+    content: " ";
+    display: inline-block;
+    height: 100%;
+    width: 0;
+    vertical-align: middle;
+}
 .lesson-content:hover    .rabbit1 {
     visibility: visible;
 } 
@@ -266,7 +246,7 @@ li:hover{
     position: absolute;
     visibility: hidden;
     bottom: 100%;
-    bottom: 81%;
+    bottom: 96%;
     left: 39%;
 }
 .lesson-content:hover{
@@ -278,70 +258,54 @@ li:hover{
     width:175px;
     height:105px;
     opacity:0.7;
-    margin-right:20px; 
-    line-height: 50px;
     text-align: center;
+}
+.lesson-content::before {
+    content: " ";
+    display: inline-block;
+    height: 122%;
+    width: 0;
+    vertical-align: middle;
 }
 .lessonname2{ 
-    width:133px;
-    height:45px;
     font-size:18px;
-    font-family:PingFangSC-Light,PingFang SC;
-    font-weight:300;
-    color:rgba(255,255,255,1);
-    line-height:25px;
-     
+    color:rgba(255,255,255,1);    
 }
-.teachername2{
-    font: size 14px;
-    font-family:PingFangSC-Light,PingFang SC;
-    font-weight:300;
-    color:rgba(255,255,255,1);
-    line-height:25px;
-    text-align: center;
-}
+
 /**/
-.footer-container{
+.footer{
     width:100%;
     height:120px;
     background:rgba(51,51,51,1);
-    box-shadow:0px -2px 0px 0px rgba(238,238,238,1);
-    margin-bottom: 30px;
-    text-align: center;
 }
-.footer{
+.footer-center{
     width: 320px;
     margin: 0 auto;
+    display: block;
+    height: 120px;;
+}
+.footer-center::before {
+    content: " ";
+    display: inline-block;
+    height: 50%;
+    width: 0;
 }
 .rabbit2{
     border-bottom: 2px solid rgba(155,155,155,1);
     text-align:center;
     margin-bottom: 3px;
-    padding-top: 20px;
     width: 300px;
 }
-.xixixixi{
-
-}
 .muxistdio{
-    width:143px;
-    height:20px;
     font-size:14px;
-    font-family:PingFangSC-Light,PingFang SC;
-    font-weight:300;
     color:rgba(155,155,155,1);
-    line-height:20px;
     letter-spacing:4px;
     border-right: 3px solid #EA5A70;
     border-radius:2px;
+    padding-right: 7px;
 }
 .school{
-    width:140px;
-    height:20px;
     font-size:14px;
-    font-family:PingFangSC-Light,PingFang SC;
-    font-weight:300;
     color:rgba(155,155,155,1);
-    line-height:20px;
     padding-left: 20px;
 }
